[server] always apply namespacing (#1494)
* add null as default namespace

* always apply namespacing

* remove deprecated filtering by namespace of enumeration items

* remove deprecated method canRead

* remove deprecated partial enum access test

* fix entity update namespace check

* remove deprecated RcaMetadataDto